@@ -436,11 +436,21 @@
 	{units}
 	{~units}
 
+	{traits.cfg}
+
+	#traits that are common to all races and units
+	{TRAIT_STRONG}
+	{TRAIT_QUICK}
+	{TRAIT_INTELLIGENT}
+	{TRAIT_RESILIENT}
+
 	[race]
 	name=elf
 	num_traits=2
 	markov_chain_size=2
 	{ELVISH_NAMES}
+
+	{TRAIT_DEXTROUS}
 	[/race]
 	[race]
 	name=wose
@@ -508,63 +518,6 @@
 	#Tentative list of fricative heavy lizard names
 	{LIZARD_NAMES}
 	[/race]
-
-	[trait]
-	id=loyal
-	name= _ "loyal"
-		[effect]
-		apply_to=loyal
-		[/effect]
-	[/trait]
-
-	[trait]
-	id=strong
-	name= _ "strong"
-		[effect]
-		apply_to=attack
-		range=short
-		increase_damage=1
-		[/effect]
-		[effect]
-		apply_to=hitpoints
-		increase_total=2
-		heal_full=yes
-		[/effect]
-	[/trait]
-
-	[trait]
-	id=quick
-	name= _ "quick"
-		[effect]
-		apply_to=movement
-		increase=1
-		[/effect]
-		[effect]
-		apply_to=hitpoints
-		increase_total=-10%
-		heal_full=yes
-		[/effect]
-	[/trait]
-
-	[trait]
-	id=intelligent
-	name= _ "intelligent"
-		[effect]
-		apply_to=max_experience
-		increase=-20%
-		[/effect]
-	[/trait]
-
-	[trait]
-	id=resilient
-	name= _ "resilient"
-		[effect]
-		apply_to=hitpoints
-		increase_total=7
-		#make sure the unit starts at full health
-		heal_full=yes
-		[/effect]
-	[/trait]
 
 	[movetype]
 	name=smallfoot
