@@ -1,0 +1,78 @@
+#define TRAIT_LOYAL
+	[trait]
+	id=loyal
+	name= _ "loyal"
+		[effect]
+		apply_to=loyal
+		[/effect]
+	[/trait]
+#enddef
+
+#define TRAIT_STRONG
+	[trait]
+	id=strong
+	name= _ "strong"
+		[effect]
+		apply_to=attack
+		range=short
+		increase_damage=1
+		[/effect]
+		[effect]
+		apply_to=hitpoints
+		increase_total=2
+		heal_full=yes
+		[/effect]
+	[/trait]
+#enddef
+
+#define TRAIT_DEXTROUS
+	[trait]
+	id=dextrous
+	name= _ "dextrous"
+		[effect]
+		apply_to=attack
+		range=long
+		increase_damage=1
+		[/effect]
+	[/trait]
+#enddef
+
+#define TRAIT_QUICK
+	[trait]
+	id=quick
+	name= _ "quick"
+		[effect]
+		apply_to=movement
+		increase=1
+		[/effect]
+		[effect]
+		apply_to=hitpoints
+		increase_total=-10%
+		heal_full=yes
+		[/effect]
+	[/trait]
+#enddef
+
+#define TRAIT_INTELLIGENT
+	[trait]
+	id=intelligent
+	name= _ "intelligent"
+		[effect]
+		apply_to=max_experience
+		increase=-20%
+		[/effect]
+	[/trait]
+#enddef
+
+#define TRAIT_RESILIENT
+	[trait]
+	id=resilient
+	name= _ "resilient"
+		[effect]
+		apply_to=hitpoints
+		increase_total=7
+		#make sure the unit starts at full health
+		heal_full=yes
+		[/effect]
+	[/trait]
+#enddef
